atualização do cadastro de empresa

--- a/views/assets/css/style.css
+++ b/views/assets/css/style.css
@@ -166,7 +166,7 @@ height: fit-content;
   flex-direction: column;
   align-items: center;
   width: 100%;
-  height: 670px;
+  height: fit-content;
   overflow-y: auto;
   overflow-x: hidden;
   
@@ -434,7 +434,6 @@ outline: #646363 solid 2px;
 
 #formularioMaisSobre textarea.formInput::placeholder{
   padding-top: 48px;
-  
 
 }
 
@@ -933,7 +932,7 @@ outline: #646363 solid 2px;
 
 /* PAGE FORMULARIO INFO EMPRESA */
 
-.holderFormularioUsuarioEmpresa {
+.holderMaisSobreEmpresa {
   height: 100vh;
   width: 100vw;
   display: flex;
@@ -947,12 +946,32 @@ outline: #646363 solid 2px;
   background-image: url("../img//fundo-cadastro.svg");
 }
 
+#formularioMaisSobreEmpresa div.formularioHolder{
+  height: 570px;
+  overflow-y: auto;
+}
+
+#formularioMaisSobreEmpresa textarea.formInput{
+  height: 120px;
+  resize: none;
+  overflow-y: auto;
+  padding: 10px 20px 10px 20px  ;
+  
+}
+
+#formularioMaisSobreEmpresa textarea.formInput::placeholder{
+  padding-top: 48px;
+
+}
+
+
 #formularioUsuarioEmpresa button.formSubmit{
   margin-top: 40px;
 }
 
-#formularioUsuarioEmpresa a.setaVoltar{
-  padding-top: 40px;
+
+#formularioUsuarioEmpresa div.formulario{
+  height: 700px;
 }
 
 .subTituloFormHolderUsuarioEmpresa {
