--- a/views/assets/css/style.css
+++ b/views/assets/css/style.css
@@ -474,7 +474,7 @@ outline: #646363 solid 2px;
  padding-block: 5px;
   margin-top: 20px;
   width: 495px;
-  height: 50px;
+  height: 80px;
   background: #9998d3;
   border-radius: 25px;
   font-family: "Raleway Bold";
@@ -547,12 +547,13 @@ outline: #646363 solid 2px;
 
 .formInputFoto {
   width: 495px;
-  height: 50px;
+  height: 80px;
   background: #fcf892;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
-  border-radius: 20px;
+  border-radius: 25px;
   border: none;
 
+  padding-block: 5px;
   display: flex;
   justify-content: center;
   font-family: "Raleway Bold", sans-serif;
@@ -955,7 +956,7 @@ outline: #646363 solid 2px;
   height: 120px;
   resize: none;
   overflow-y: auto;
-  padding: 10px 20px 10px 20px  ;
+  padding: 5px 20px 10px 20px  ;
   
 }
 
@@ -963,6 +964,24 @@ outline: #646363 solid 2px;
   padding-top: 48px;
 
 }
+
+
+
+.formularioHolder::-webkit-scrollbar{
+  width: 10px;
+
+}
+
+.formularioHolder::-webkit-scrollbar-track {
+  background-color: #14526945;
+  border-radius: 20px;
+}
+
+.formularioHolder::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #4544aec8;
+}
+
 
 
 #formularioUsuarioEmpresa button.formSubmit{
