--- a/assets/styles/stylesheet.css
+++ b/assets/styles/stylesheet.css
@@ -23,38 +23,55 @@
 input[type="search"]::-webkit-search-decoration,
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-results-button,
-input[type="search"]::-webkit-search-results-decoration { display: none; }
+input[type="search"]::-webkit-search-results-decoration {
+  display: none;
+}
 
-input[type=search]::-ms-clear { display: none; width : 0; height: 0; }
-input[type=search]::-ms-reveal { display: none; width : 0; height: 0; }
+input[type="search"]::-ms-clear {
+  display: none;
+  width: 0;
+  height: 0;
+}
+input[type="search"]::-ms-reveal {
+  display: none;
+  width: 0;
+  height: 0;
+}
 
 /* GERAL */
-a{
+
+.textPadrao {
+  font-family: "Raleway Bold";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28px;
+}
+
+a {
   text-decoration: none;
 }
 
-html, body {
+html,
+body {
   scroll-behavior: smooth;
   max-width: 100%;
-
 }
-body{
+body {
   display: flex;
   flex-direction: column;
   align-items: center;
-    overflow-x: hidden;
+  overflow-x: hidden;
 }
 
 * {
   margin: 0;
   padding: 0;
-
 }
 
-::-webkit-scrollbar {
-  
+.enfase {
+  color: #5452a0 !important;
 }
-
 
 /* NAV */
 #navbar {
@@ -72,9 +89,7 @@ body{
 }
 
 .FooterHolder {
-
 }
-
 
 .hover-underline-animation-white {
   display: inline-block;
@@ -83,7 +98,7 @@ body{
 }
 
 .hover-underline-animation-white:after {
-  content: '';
+  content: "";
   position: absolute;
   width: 100%;
   transform: scaleX(0);
@@ -91,13 +106,13 @@ body{
   bottom: 0;
   left: 0;
   background-color: white;
-  transform-origin: center ;
+  transform-origin: center;
   transition: transform 0.25s ease-out;
 }
 
 .hover-underline-animation-white:hover:after {
   transform: scaleX(1);
-  transform-origin: center ;
+  transform-origin: center;
 }
 
 .hover-underline-animation {
@@ -107,7 +122,7 @@ body{
 }
 
 .hover-underline-animation:after {
-  content: '';
+  content: "";
   position: absolute;
   width: 100%;
   transform: scaleX(0);
@@ -115,15 +130,14 @@ body{
   bottom: 0;
   left: 0;
   background-color: #1e1e1e;
-  transform-origin: center ;
+  transform-origin: center;
   transition: transform 0.25s ease-out;
 }
 
 .hover-underline-animation:hover:after {
   transform: scaleX(1);
-  transform-origin: center ;
+  transform-origin: center;
 }
-
 
 .navbarElement {
   font-family: "Raleway Extra Bold", sans-serif;
@@ -135,9 +149,9 @@ body{
   margin-left: 10px;
 }
 
-.navbarElement:hover{
-color: #1e1e1e;
-border-bottom-width: 1px;
+.navbarElement:hover {
+  color: #1e1e1e;
+  border-bottom-width: 1px;
 }
 
 .navbarElementBotao {
@@ -157,13 +171,10 @@ border-bottom-width: 1px;
   width: 270px;
 }
 
-
-
-
 /* ELEMENTOS PAGE */
 
 /* MAIN CONTAINER */
-.container-content{
+.container-content {
   width: 100vw;
   display: flex;
   flex-direction: column;
@@ -176,8 +187,8 @@ border-bottom-width: 1px;
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
-  width:100%;
-  height:90vh;
+  width: 100%;
+  height: 90vh;
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url("../images/background.svg");
@@ -200,16 +211,15 @@ border-bottom-width: 1px;
   font-family: "Raleway Bold", sans-serif;
   font-size: 1.5vw;
   display: inline-block;
-
 }
 
-.descImage{
+.descImage {
   width: 40vw;
 }
 
 /* SEGUNDA PARTE PAGE */
 
-.holderSegundaPage{
+.holderSegundaPage {
   height: 90vh;
   width: 100%;
   margin-top: 120px;
@@ -224,8 +234,6 @@ border-bottom-width: 1px;
   justify-content: center;
   text-align: center;
 }
-
-
 
 .textin {
   color: #202225;
@@ -265,15 +273,11 @@ border-bottom-width: 1px;
   padding-top: 20px;
 }
 
-
-
-
 /* TERCEIRA PARTE PAGE */
-.holderTerceiraPage{
+.holderTerceiraPage {
   height: 40vh;
   width: 100%;
   margin-top: 130px;
-
 }
 
 .faixaNetworking {
@@ -310,11 +314,9 @@ border-bottom-width: 1px;
   display: inline-block;
 }
 
-
-
 /* QUARTA PARTE PAGE */
 
-.holderQuartaPage{
+.holderQuartaPage {
   height: 60vh;
   width: 100vw;
   margin-top: 100px;
@@ -332,7 +334,6 @@ border-bottom-width: 1px;
   width: 33vw;
 }
 
-
 .lojinhaTextTitulo {
   color: #202225;
   font-family: "Raleway Extra Bold", sans-serif;
@@ -340,8 +341,8 @@ border-bottom-width: 1px;
   display: inline-block;
 }
 
-.lojinhaTextTitulo enfase{
-  color: #5452A0;
+.lojinhaTextTitulo enfase {
+  color: #5452a0;
 }
 
 .lojinhaTextSubTitulo {
@@ -356,7 +357,6 @@ border-bottom-width: 1px;
   width: 20vw;
 }
 
-
 .lojinhaText {
   color: #2f3136;
   font-family: "Raleway Bold", sans-serif;
@@ -364,10 +364,9 @@ border-bottom-width: 1px;
   display: inline-block;
 }
 
-.lojinhaText enfase{
-  color: #5452A0;
+.lojinhaText enfase {
+  color: #5452a0;
 }
-
 
 .lojinhaImg {
   width: 100%;
@@ -375,10 +374,8 @@ border-bottom-width: 1px;
   padding-left: 80px;
 }
 
-
-
 /* QUINTA PARTE PAGE */
-.holderQuintaPage{
+.holderQuintaPage {
   display: flex;
   flex-direction: row;
   height: 40vw;
@@ -389,14 +386,13 @@ border-bottom-width: 1px;
   background-image: url("../images/fundo.svg");
 }
 
-.leandro{
+.leandro {
   align-self: flex-end;
   padding-left: 4vw;
   height: 24vh;
-  
 }
 
-.funcionalidadesHolder{
+.funcionalidadesHolder {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -408,7 +404,7 @@ border-bottom-width: 1px;
   margin-left: -11vw;
 }
 
-.balaoFuncionalidade{
+.balaoFuncionalidade {
   display: flex;
   align-items: center;
   flex-direction: row;
@@ -423,12 +419,12 @@ border-bottom-width: 1px;
   border-radius: 30px;
 }
 
-.iconeFuncionalidade{
-  padding-left:50px; 
+.iconeFuncionalidade {
+  padding-left: 50px;
   width: 4vw;
 }
 
-.textoFuncionalidade{
+.textoFuncionalidade {
   color: #202225;
   font-family: "Raleway Bold", sans-serif;
   font-size: 1.7vw;
@@ -436,20 +432,20 @@ border-bottom-width: 1px;
   padding-left: 20px;
 }
 
-.textosFuncionalidades{
+.textosFuncionalidades {
   width: 23vw;
   display: flex;
   flex-direction: column;
 }
 
-.funcionalidadesTitulo{
+.funcionalidadesTitulo {
   color: #202225;
   font-family: "Raleway Extra Bold", sans-serif;
   font-size: 2.5vw;
   display: inline-block;
 }
 
-.funcionalidadesSubTitulo{
+.funcionalidadesSubTitulo {
   color: #202225;
   font-family: "Raleway Extra Bold", sans-serif;
   font-size: 1.9vw;
@@ -457,14 +453,13 @@ border-bottom-width: 1px;
   padding-top: 25px;
 }
 
-.funcionalidadesTextos{
-  color: #2F3136;
+.funcionalidadesTextos {
+  color: #2f3136;
   font-family: "Raleway Bold", sans-serif;
   font-size: 1.2vw;
   display: inline-block;
   padding-top: 10px;
 }
-
 
 .faixaTextoHolder {
   width: 1650px;
@@ -476,36 +471,28 @@ border-bottom-width: 1px;
   padding-left: 10px;
 }
 
-
-#SeguraTudo4{
+#SeguraTudo4 {
   position: relative;
   width: 1600px;
   height: 700px;
 }
 
-
-
-
-
-
-
-#home{
+#home {
   width: 100%;
 }
 
 /* FOOTER PARTE PAGE */
-.container-footer{
+.container-footer {
   display: flex;
   flex-direction: column;
   justify-items: center;
   align-items: center;
   height: 20vh;
   width: 100vw;
-  background-color: #9998D3;
-
+  background-color: #9998d3;
 }
 
-.FooterElement{
+.FooterElement {
   text-decoration: none;
   color: #ffffff;
   font-family: "Raleway Bold", sans-serif;
@@ -513,17 +500,17 @@ border-bottom-width: 1px;
   display: inline-block;
 }
 
-.FooterHolder{
+.FooterHolder {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   width: 635px;
   height: 50px;
- padding-top: 40px;
+  padding-top: 40px;
 }
 
-.FooterHolder2{
+.FooterHolder2 {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
@@ -533,7 +520,7 @@ border-bottom-width: 1px;
   padding-left: 15px;
 }
 
-.FooterHolder3{
+.FooterHolder3 {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
@@ -542,36 +529,37 @@ border-bottom-width: 1px;
   height: 50px;
   margin-top: 15px;
   padding-top: 25px;
-  border-top: 1px solid #FFFFFF;
+  border-top: 1px solid #ffffff;
 }
 
-.imgSetaTopo{
-  position: absolute; 
-  margin-left: 700px; 
+.imgSetaTopo {
+  position: absolute;
+  margin-left: 700px;
   margin-top: 50px;
 }
 
-
 /* PAGE FEED */
 
-.holderFeed{
+.holderFeed {
   display: grid;
-  grid-template-columns: repeat(8, 1fr );
+  grid-template-columns: repeat(8, 1fr);
   width: 100vw;
   height: 100vh;
-  
 }
 
-.leftBarHolder{
-    grid-column: 2 span / 2 span;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: end;
-    
+body::-webkit-scrollbar {
+  display: none;
 }
 
-.leftBar{
+.leftBarHolder {
+  grid-column: 2 span / 2 span;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: end;
+}
+
+.leftBar {
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -580,7 +568,7 @@ border-bottom-width: 1px;
   position: fixed;
 }
 
-.imgLogoFeed{
+.imgLogoFeed {
   width: 210px;
   height: 100px;
   margin-block: 25px;
@@ -588,7 +576,7 @@ border-bottom-width: 1px;
 }
 
 .leftBarMenu a {
-  font-family: 'Raleway Bold';
+  font-family: "Raleway Bold";
   font-size: 28px;
   margin-block: 10px;
   color: black;
@@ -597,7 +585,6 @@ border-bottom-width: 1px;
 
 .leftBarMenu a:hover {
   color: rgba(56, 55, 161, 1);
-  
 }
 
 .leftBarMenu {
@@ -607,115 +594,235 @@ border-bottom-width: 1px;
   height: 100%;
   align-items: center;
   align-self: end;
-
 }
 
-.innerLeftBarMenu{
-  display: flex; 
-  flex-direction: column; 
+.innerLeftBarMenu {
+  display: flex;
+  flex-direction: column;
   width: 346px;
   height: 100%;
   justify-content: space-between;
   align-self: end;
 }
 
-
-.line{
+.line {
   margin: 15px 0 30px 0;
- height: 1px;
+  height: 1px;
 }
 
-.botaoCPost{
+.botaoCPost {
   height: 60px;
   width: 300px;
-  background: #FFFB9F;
+  background: #fffb9f;
   border-radius: 30px;
 
   border: none;
 
-  font-family: 'Raleway Bold';
+  font-family: "Raleway Bold";
   font-size: 23px;
-  
+
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
 }
 
-.botaoCPost a:hover{
-color: black;
+.botaoCPost a:hover {
+  color: black;
 }
 
-.botaoCPost:hover{
-  background:  #FBF793;
+.botaoCPost a {
+  padding-block: 15px;
+  padding-inline: 45px;
+}
+
+.botaoCPost:hover {
+  background: #fbf793;
   cursor: pointer;
   transition: 0.1s;
 
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.14);
 }
 
+/* MODAL DO POST */
 
+.modal {
+  padding: 0 0 !important;
+  border-radius: 20px !important;
 
+  width: 800px;
+  height: 800px;
 
-.userElementos{
+  max-width: 800px !important;
+  max-height: 800px !important;
+
+  overflow: hidden;
+}
+
+.modal a.close-modal {
+  display: none !important;
+}
+
+.modal-foto-post {
+  display: flex;
+  flex-direction: column;
+
+  width: 800px !important;
+  height: 800px !important;
+
+  border-radius: 20px;
+  box-shadow: 1px 1px 40px 1px black;
+}
+
+.tituloModalPost {
+  display: flex;
+  flex-direction: row;
+
+  justify-content: center;
+  align-items: center;
+
+  width: 100%;
+  height: 70px;
+
+  align-self: flex-start;
+
+  border-bottom: 1px solid gray;
+
+  font-family: "Raleway Bold";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 35px;
+}
+
+.inputArea {
+  display: flex;
+  flex-direction: column;
+
+  justify-content: center;
+  align-items: center;
+
+  width: 100%;
+  height: 90%;
+
+  gap: 30px;
+}
+
+.inputButtonEstilo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 486px;
+  height: 58px;
+
+  background: #9998d3;
+  border-radius: 25px;
+
+  font-family: "Raleway Bold";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28px;
+  color: black;
+  cursor: pointer;
+}
+
+.inputButtonEstilo:hover {
+  background: rgba(153, 152, 211, 0.9);
+}
+
+.inputForm {
+  display: none;
+}
+
+/* MODAL RECORTAR IMAGEM POST */
+
+.cr-slider {
+  display: none;
+}
+
+.croppie-container {
+  height: 710px !important;
+  width: 800px !important;
+}
+
+.tituloModalPost a {
+  color: #3837a1;
+}
+
+.tituloModalPost a:hover {
+  color: rgba(56, 55, 161, 0.9);
+}
+
+/* MODAL detalhes Post */
+
+#criar-post label.tituloModalPost {
+  font-family: "Raleway Bold";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 35px;
+
+  color: #3837A1;
+}
+
+#criar-post label.tituloModalPost:hover{
+  background: rgba(56, 55, 161, 0.9);
+}
+
+#criar-post{
+  width: 1000px;
+}
+
+.userElementos {
   display: flex;
   flex-direction: row;
   align-items: center;
   margin-bottom: 20px;
   width: 300px;
-  padding:7px 0 7px 10px;
+  padding: 7px 0 7px 10px;
   border-radius: 50px;
 }
 
-.userElementos:hover{
+.userElementos:hover {
   background-color: rgba(231, 233, 234, 0.7);
   cursor: pointer;
   transition: 0.1s;
 }
 
-  .imagemUser{
-    width: 60px; 
-    height: 60px; 
-    border-radius: 100px;  
-    border: 2px solid #a0bbc0;
-    background-color: #bad5db;
-    }
+.imagemUser {
+  width: 60px;
+  height: 60px;
+  border-radius: 100px;
+  border: 2px solid #a0bbc0;
+  background-color: #bad5db;
+}
 
-  .textNomeUsuario{
-    font-family: 'Raleway Bold';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 23px;
-    color: #000000;
-    }
-    
-    .textTagUsuario{
-    font-family: 'Raleway Regular';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 23px;
-    color: #565656;
-    }
-    
+.textNomeUsuario {
+  font-family: "Raleway Bold";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 23px;
+  color: #000000;
+}
 
+.textTagUsuario {
+  font-family: "Raleway Bold";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 23px;
+  color: #565656;
+}
 
-
-.postsHolder{
-  background-color: #E0F1F4;
+.postsHolder {
+  background-color: #e0f1f4;
   grid-column: 4 span / 4 span;
   width: 100%;
   height: 100%;
 }
 
-.rightBarHolder{
-  grid-column:  2 span / 2 span;
+.rightBarHolder {
+  grid-column: 2 span / 2 span;
   width: 100%;
   height: 100%;
 }
-
-
-
-
-
-
-
-
