--- a/views/assets/css/style.css
+++ b/views/assets/css/style.css
@@ -19,8 +19,6 @@
   src: url("../fonts/Raleway-ExtraBold.ttf");
 }
 
-
-
 @font-face {
   font-family: "Public Sans Extra Bold";
   src: url("../fonts/PublicSans-ExtraBold.ttf");
@@ -70,8 +68,6 @@ body {
   max-height: 100%;
   overflow-x: hidden;
 }
-
-
 
 /* PAGE ESCOLHA TIPO USUARIO */
 
@@ -140,7 +136,6 @@ body {
   width: 620px;
   height: fit-content;
 
-
   background-color: #bad5db;
   border-radius: 20px;
   margin: 20px;
@@ -157,8 +152,8 @@ body {
   display: flex;
   flex-direction: column;
 
-height: fit-content;
-  padding: 0 50px 15px 50px ;
+  height: fit-content;
+  padding: 0 50px 15px 50px;
 }
 
 .formElementsHolderflexivel {
@@ -169,9 +164,7 @@ height: fit-content;
   height: fit-content;
   overflow-y: auto;
   overflow-x: hidden;
-  
 }
-
 
 .tituloFormHolderFoto {
   font-family: "Raleway Bold", sans-serif;
@@ -194,9 +187,9 @@ height: fit-content;
   text-align: center;
 }
 
-.setaVoltar{
+.setaVoltar {
   padding: 15px 0 15px 50px;
- 
+
   align-self: flex-start;
 }
 
@@ -221,15 +214,11 @@ height: fit-content;
 
   text-decoration: none;
   letter-spacing: 1px;
- 
- 
-
 }
 
 .formularioHolder {
   width: 100%;
   height: fit-content;
-
 }
 
 .formText {
@@ -257,15 +246,14 @@ height: fit-content;
   line-height: 19px;
 }
 .formInput:focus {
-outline: #646363 solid 2px;
+  outline: #646363 solid 2px;
 }
 
-.formulario div.formInput{
+.formulario div.formInput {
   padding-inline: 0px;
-
 }
 
-.formulario button.formSubmit{
+.formulario button.formSubmit {
   margin-top: 45px;
 }
 
@@ -292,7 +280,7 @@ outline: #646363 solid 2px;
   color: #c1c1c1;
 }
 
-.formInput input:focus{
+.formInput input:focus {
   outline: #646363 solid 2px;
 }
 
@@ -305,7 +293,7 @@ outline: #646363 solid 2px;
   color: #c1c1c1;
 }
 
-#revealPassword{
+#revealPassword {
   background: url(https://cdn-icons-png.flaticon.com/512/3945/3945105.png);
   background-size: cover;
 
@@ -320,7 +308,7 @@ outline: #646363 solid 2px;
   cursor: pointer;
 }
 
-#revealPassword.hide{
+#revealPassword.hide {
   background: url(https://cdn-icons-png.flaticon.com/512/2533/2533656.png);
   background-size: cover;
 }
@@ -363,7 +351,7 @@ outline: #646363 solid 2px;
   border: none;
 }
 
-.caixaMostrarSenha{
+.caixaMostrarSenha {
   display: flex;
   align-items: center;
   height: 40px;
@@ -373,8 +361,6 @@ outline: #646363 solid 2px;
   margin-left: 20px;
 }
 
-
-
 .cookieCadastro {
   width: 100%;
   display: flex;
@@ -382,8 +368,6 @@ outline: #646363 solid 2px;
   font-family: "Raleway Bold", sans-serif;
   color: #db310c;
 }
-
-
 
 .cookieCadastroEmpresa {
   position: absolute;
@@ -394,11 +378,7 @@ outline: #646363 solid 2px;
   color: #db310c;
 }
 
-
-
-
-
-.textoCerto{
+.textoCerto {
   margin: 7px 0 0 0;
   font-family: "Raleway Bold", sans-serif;
   color: #3837a1;
@@ -424,17 +404,15 @@ outline: #646363 solid 2px;
   background-image: url("../img//fundo-cadastro.svg");
 }
 
-#formularioMaisSobre textarea.formInput{
+#formularioMaisSobre textarea.formInput {
   height: 120px;
   resize: none;
   overflow-y: auto;
-  padding: 10px 20px 10px 20px  ;
-  
+  padding: 10px 20px 10px 20px;
 }
 
-#formularioMaisSobre textarea.formInput::placeholder{
-  padding-top: 48px;
-
+#formularioMaisSobre textarea.formInput::placeholder {
+  padding-top: 40px;
 }
 
 /* PAGE CADASTRO DE FOTO */
@@ -468,13 +446,13 @@ outline: #646363 solid 2px;
 }
 
 .formLabelFoto {
- display: flex;
- justify-content: center;
- align-items: center;
- padding-block: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-block: 5px;
   margin-top: 20px;
   width: 495px;
-  height: 80px;
+  height: 100px;
   background: #9998d3;
   border-radius: 25px;
   font-family: "Raleway Bold";
@@ -485,22 +463,30 @@ outline: #646363 solid 2px;
   color: #ffffff;
   cursor: pointer;
 }
+
+#formularioFoto label.formLabelFoto {
+  height: 50px;
+}
+
+#formularioFoto a.formInputFoto {
+  height: 60px;
+}
+
+
+
 .previewFormFoto {
   margin-top: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
-  
 }
 
 .previewFoto {
   width: 180px;
   height: 180px;
   border-radius: 100px;
-  border: #9998D3 solid 2px;
-
+  border: #9998d3 solid 2px;
 }
-
 
 .inputFormFoto {
   display: none;
@@ -547,13 +533,12 @@ outline: #646363 solid 2px;
 
 .formInputFoto {
   width: 495px;
-  height: 80px;
+  height: 100px;
   background: #fcf892;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
   border-radius: 25px;
   border: none;
 
-  padding-block: 5px;
   display: flex;
   justify-content: center;
   font-family: "Raleway Bold", sans-serif;
@@ -569,19 +554,19 @@ outline: #646363 solid 2px;
   cursor: pointer;
 }
 
-.modal{
+.modal {
   flex-direction: column !important;
   align-items: center !important;
   justify-content: center !important;
   width: 500px;
   height: fit-content;
   padding: 0 0 0 0 !important;
-  background: #BAD5DB !important;
+  background: #bad5db !important;
   border-radius: 20px !important;
   align-self: center;
 }
 
-.modalInner{
+.modalInner {
   display: flex !important;
   flex-direction: column !important;
   align-items: center !important;
@@ -589,10 +574,12 @@ outline: #646363 solid 2px;
   width: 500px;
   height: fit-content;
   padding: 0 0 0 0 !important;
-  background: #BAD5DB !important;
+  background: #bad5db !important;
   border-radius: 20px;
+
+  transition: 1s;
 }
-.blocker{
+.blocker {
   display: flex;
   justify-content: center;
 }
@@ -605,32 +592,32 @@ outline: #646363 solid 2px;
   text-align: center;
   border-radius: 10px;
   padding-inline: 5px;
-  border: rgba(0,0,0, 0.1) solid 2px;
-  background: rgba(0,0,0,0.1);
+  border: rgba(0, 0, 0, 0.1) solid 2px;
+  background: rgba(0, 0, 0, 0.1);
   align-content: center;
 }
 
-.cr-slider{
+.cr-slider {
   width: 390px !important;
 }
 
-.croppie-container .cr-boundary{
+.croppie-container .cr-boundary {
   width: 80% !important;
   height: 380px !important;
   border-radius: 15px;
-  border: rgba(0,0,0,0.5) solid 2px;
+  border: rgba(0, 0, 0, 0.5) solid 2px;
 }
 
-.modal a.close-modal{
+.modal a.close-modal {
   display: none !important;
 }
 
-.modal a.formInputFoto{
-
-  width: 270px;
+.modal a.formInputFoto {
+  width: 400px;
+  height: 55px;
 }
 
-.modal a{
+.modal a {
   text-decoration: none !important;
 }
 .modal span.subTituloForm {
@@ -662,11 +649,11 @@ outline: #646363 solid 2px;
   background-image: url("../img//fundo-cadastro.svg");
 }
 
-.holderFormularioPet1 a.setaVoltar{
+.holderFormularioPet1 a.setaVoltar {
   padding-top: 25px;
 }
 
-#formulariopet1 div.tituloFormHolder{
+#formulariopet1 div.tituloFormHolder {
   margin-top: 60px;
 }
 
@@ -683,8 +670,8 @@ outline: #646363 solid 2px;
   margin-top: 90px;
 }
 
-.enfaseTexto{
-  color: #3837A1;
+.enfaseTexto {
+  color: #3837a1;
 }
 
 .escolhasHolder {
@@ -745,13 +732,11 @@ outline: #646363 solid 2px;
   margin-top: 50px;
 }
 
-#formulariopet1 div.formElementsHolderflexivel{
+#formulariopet1 div.formElementsHolderflexivel {
   height: 550px;
 }
 
-
-
-#formulariopet1 div.subTituloForm{
+#formulariopet1 div.subTituloForm {
   margin-top: 40px;
 }
 /* PAGE FORMULARIO PET 2 TA USANDO O CSS DO FORMULARIO DO USUARIO */
@@ -768,17 +753,15 @@ outline: #646363 solid 2px;
   background-image: url("../img//fundo-cadastro.svg");
 }
 
-.holderFormularioPet a.setaVoltar{
+.holderFormularioPet a.setaVoltar {
   padding-top: 30px;
 }
 
-
-
-#formularioPet2 div.formulario{
+#formularioPet2 div.formulario {
   height: 750px;
 }
 
-.holderFormularioPet button.formSubmit{
+.holderFormularioPet button.formSubmit {
   margin-top: 40px;
 }
 
@@ -898,18 +881,17 @@ outline: #646363 solid 2px;
   color: #000000;
 }
 
-#paginafinal div.tituloFormHolder2{
+#paginafinal div.tituloFormHolder2 {
   padding-top: 50px;
 }
 
-#finalizarCadastroEmpresa div.tituloFormHolder2{
+#finalizarCadastroEmpresa div.tituloFormHolder2 {
   padding-top: 50px;
 }
-
 
 .botaoFinalizar {
   width: 495px;
-  height: 44px;
+  height: 50px;
   background: #fcf892;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
 
@@ -947,29 +929,24 @@ outline: #646363 solid 2px;
   background-image: url("../img//fundo-cadastro.svg");
 }
 
-#formularioMaisSobreEmpresa div.formularioHolder{
+#formularioMaisSobreEmpresa div.formularioHolder {
   height: 570px;
   overflow-y: auto;
 }
 
-#formularioMaisSobreEmpresa textarea.formInput{
+#formularioMaisSobreEmpresa textarea.formInput {
   height: 120px;
   resize: none;
   overflow-y: auto;
-  padding: 5px 20px 10px 20px  ;
-  
+  padding: 5px 20px 10px 20px;
 }
 
-#formularioMaisSobreEmpresa textarea.formInput::placeholder{
+#formularioMaisSobreEmpresa textarea.formInput::placeholder {
   padding-top: 48px;
-
 }
 
-
-
-.formularioHolder::-webkit-scrollbar{
+.formularioHolder::-webkit-scrollbar {
   width: 10px;
-
 }
 
 .formularioHolder::-webkit-scrollbar-track {
@@ -982,14 +959,11 @@ outline: #646363 solid 2px;
   background-color: #4544aec8;
 }
 
-
-
-#formularioUsuarioEmpresa button.formSubmit{
+#formularioUsuarioEmpresa button.formSubmit {
   margin-top: 40px;
 }
 
-
-#formularioUsuarioEmpresa div.formulario{
+#formularioUsuarioEmpresa div.formulario {
   height: 700px;
 }
 
@@ -1036,8 +1010,12 @@ outline: #646363 solid 2px;
   background-image: url("../img//fundo-cadastro.svg");
 }
 
-#formularioFotoEmpresa div.formulario{
+#formularioFotoEmpresa div.formulario {
   height: 760px;
+}
+
+#formularioFotoEmpresa a.formInputFoto {
+  height: 120px;
 }
 
 .formTextFotoEmpresa {
@@ -1088,22 +1066,21 @@ outline: #646363 solid 2px;
   padding-top: 40px;
 }
 
-#formularioRamoEmpresa div.formulario{
+#formularioRamoEmpresa div.formulario {
   height: 650px;
 }
 
-#formularioRamoEmpresa div.tituloFormHolder{
+#formularioRamoEmpresa div.tituloFormHolder {
   margin-top: 70px;
 }
 
 .formInputRamo {
   width: 495px;
-  height: 44px;
+  height: 55px;
   background: #fcf892;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
   border-radius: 20px;
-  margin-top: 70px;
-  margin-left: 5px;
+
   border: none;
 
   font-family: "Raleway Bold", sans-serif;
@@ -1150,7 +1127,7 @@ outline: #646363 solid 2px;
   background-image: url("/petiti/views/assets/img/onda-login.svg");
 }
 
-.ilustracaoLogin{
+.ilustracaoLogin {
   width: 65%;
   height: 100vh;
   display: flex;
@@ -1158,12 +1135,11 @@ outline: #646363 solid 2px;
   align-items: center;
 }
 
-
 .login {
   height: 100vh;
   width: 35%;
   background: #bad5db;
-overflow: hidden;
+  overflow: hidden;
 
   display: flex;
   flex-direction: column;
@@ -1176,7 +1152,7 @@ overflow: hidden;
   margin-bottom: 30px;
 }
 
-.formLogin{
+.formLogin {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -1216,8 +1192,6 @@ overflow: hidden;
 .loginInputHolder {
   margin-top: 35px;
 }
-
-
 
 .textoLogin {
   font-family: "Raleway Bold";
