--- a/assets/styles/stylesheet.css
+++ b/assets/styles/stylesheet.css
@@ -20,6 +20,17 @@
   src: url("../fonts/Raleway-ExtraBold.ttf");
 }
 
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48
+}
+
+
+
 input[type="search"]::-webkit-search-decoration,
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-results-button,
@@ -44,8 +55,17 @@ input[type="search"]::-ms-reveal {
   font-family: "Raleway Bold";
   font-style: normal;
   font-weight: 700;
-  font-size: 24px;
+  font-size: 20px;
   line-height: 28px;
+}
+
+.textPlaceholder {
+  font-family: "Raleway Bold";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 28px;
+  color: #777777;
 }
 
 a {
@@ -648,10 +668,10 @@ body::-webkit-scrollbar {
   border-radius: 20px !important;
 
   width: 800px;
-  height: 800px;
+  height: 810px;
 
   max-width: 800px !important;
-  max-height: 800px !important;
+  max-height: 810px !important;
 
   overflow: hidden;
 }
@@ -665,7 +685,7 @@ body::-webkit-scrollbar {
   flex-direction: column;
 
   width: 800px !important;
-  height: 800px !important;
+  height: 815px !important;
 
   border-radius: 20px;
   box-shadow: 1px 1px 40px 1px black;
@@ -764,13 +784,352 @@ body::-webkit-scrollbar {
   color: #3837A1;
 }
 
-#criar-post label.tituloModalPost:hover{
-  background: rgba(56, 55, 161, 0.9);
-}
 
 #criar-post{
-  width: 1000px;
+  width: 1210px !important;
+  max-width: 1210px !important;
 }
+
+.submitCriarPost {
+
+  background: none;
+  border: none;
+
+  font-family: "Raleway Bold";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28px;
+  color: black;
+
+  color: #3837A1;
+
+  cursor: pointer;
+
+}
+
+.submitCriarPost:hover {
+  color: rgba(56, 55, 161, 0.9);
+
+}
+
+.criarPostElements{
+  display: grid;
+  grid-template-rows: repeat(15, 1fr);
+  width: 410px;
+}
+
+
+.parte1CriarPost{
+  grid-row: 7 span / 7 span;
+  width: 100%;
+  height: 100%;
+}
+
+.parte1CriarPost div.userElementos{
+  width: 100%;
+  gap: 15px;
+  padding: 20px 0 0 20px !important;
+}
+
+.parte1CriarPost .userElementos:hover{
+background: none;
+cursor: default;
+}
+
+.parte1CriarPost .imagemUser{
+    border:none !important;
+    background-color: none !important;
+    box-shadow: 0px 0px 7px 0px black !important;
+}
+
+.parte1CriarPost .textNomeUsuario{
+  font-family: 'Raleway Bold';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 23px;
+}
+
+#form-aid textarea{
+  resize: none;
+  width: 410px;
+  height: 200px;
+  border: none;
+  padding: 0 20px 0 20px;
+
+  font-family: 'Raleway Medium';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 19px;
+}
+
+#form-aid textarea:focus{
+  outline: none;
+}
+
+#form-aid textarea::placeholder{
+  font-family: 'Raleway Bold';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 19px;
+}
+
+.letraCont{
+ display: flex; 
+ width: 95%; 
+ justify-content: end; 
+ padding: 0px 20px 0 0; 
+ font-family: "Raleway Medium";
+ color: #777777;
+}
+
+
+
+
+.parte2CriarPost{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+ justify-content: space-between;
+  
+  grid-row: 1 span / 1 span;
+  width: 100%;
+  height: 100%;
+  border-bottom: 1px solid gray;
+  border-top: 1px solid gray;
+}
+
+.parte2CriarPost input{
+  height: 98%;
+  width: 70%;
+  border: none;
+  font-family: 'Raleway Medium';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 21px;
+  padding-left: 20px;
+
+}
+
+.parte2CriarPost input::placeholder{
+  font-family: 'Raleway Medium';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 21px;
+  
+  color: #777777;
+  
+}
+
+.parte2CriarPost input:focus{
+  outline:none;
+}
+
+.parte2CriarPost span.material-symbols-outlined{
+  font-size: 35px !important;
+  padding-right: 20px;
+}
+
+
+.parte3CriarPost{
+  grid-row: 7 span / 7 span;
+  width: 100%;
+  height: 100%;
+  
+}
+
+#categoriasHolder{
+  display: none;
+  
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  padding: 0px 23px 30px 23px;
+  gap: 20px;
+
+}
+
+#categoriasHolder span.textPlaceholder{
+line-height: 19px;
+font-size: 15px;
+}
+
+.parte3CriarPost span#expandMoreIcon{
+  font-size: 35px !important;
+  padding-right: 40px;
+}
+
+.parte3CriarPost span#expandLessIcon{
+  font-size: 35px !important;
+  padding-right: 40px;
+}
+
+
+.botaoShowHide{
+  width: 100%;
+  height: 50px;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  align-items: center;
+  
+  background: white;
+  border: none;
+  border-bottom: 1px solid gray;
+  border-top: 1px solid gray;
+  padding-left: 20px; 
+  
+  font-family: 'Raleway Medium';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 21px;
+
+  transition: 100ms;
+  
+  cursor: pointer;
+}
+
+.botaoShowHide:hover{
+background: rgb(245, 245, 245);
+;
+}
+
+
+#txtCategoria{
+  grid-column: 9 span;
+  height: 40px;
+   
+   
+  border: 1px solid #B7B7B7;
+  border-radius: 18px;
+   
+  border-bottom-right-radius: 0px;
+  border-top-right-radius: 0px;
+  border-right: none;
+   
+  padding: 0 10px 0 10px;
+
+  font-family: 'Raleway Bold';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 19px;
+
+ }
+ 
+ #txtCategoria::placeholder{
+  font-family: 'Raleway Bold';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 19px;
+
+  color: #B7B7B7;
+ }
+
+
+ #txtCategoria:focus{
+ outline: none;
+ }
+
+ #categoriasHolder span#addIcon{
+  font-size: 24px !important;
+  color: white;
+}
+
+ 
+#submitCategoria{
+  grid-column: 1 span;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  border: 1px solid gray;
+  border-radius: 18px;
+  
+  border-bottom-left-radius: 0px;
+  border-top-left-radius: 0px;
+  
+  background: rgba(56, 55, 161, 1);
+
+  cursor: pointer;
+ }
+
+ #submitCategoria:hover{
+  background: rgba(56, 55, 161, 0.90);
+ }
+
+
+ .categoriaSelector{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+  grid-column: 3 span;
+  height: 30px;
+  width: 70px;
+  
+  border: 1px solid rgba(56, 55, 161, 1);
+  border-radius: 18px;
+  
+  font-family: 'Raleway Medium';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 18px;
+
+  text-align: center;
+
+  color: #000000;
+  
+  position: relative;
+
+  padding: 1px 25px 1px 15px;
+
+  overflow: hidden;
+}
+
+.checkbox{
+  appearance: none;
+  position: absolute;
+  top: 40%;
+  right: -2px;
+  transform: translateY(-50%);
+
+
+  height: 35px;
+  width: 20px;  
+  
+  border: 1px solid gray;
+  
+  border-bottom: none;
+  border-top: none;
+  border-right: none;
+  
+  border-top-right-radius: 18px;
+  border-bottom-right-radius: 18px;
+
+  margin: 2px 0 0 0;
+  
+  transition: 50ms;
+
+  cursor: pointer;
+}
+
+.checkbox:checked{
+  background-color: #3837a1;
+
+}
+
+
+
+
 
 .userElementos {
   display: flex;
