--- a/assets/styles/stylesheet.css
+++ b/assets/styles/stylesheet.css
@@ -20,6 +20,31 @@
   src: url("../fonts/Raleway-ExtraBold.ttf");
 }
 
+@font-face {
+  font-family: "Public Sans Extra Bold";
+  src: url("../fonts/PublicSans-ExtraBold.ttf");
+}
+
+@font-face {
+  font-family: "Public Sans Medium";
+  src: url("../fonts/PublicSans-Medium.ttf");
+}
+
+@font-face {
+  font-family: "Public Sans Regular";
+  src: url("../fonts/PublicSans-Regular.ttf");
+}
+
+@font-face {
+  font-family: "Public Sans Thin";
+  src: url("../fonts/PublicSans-Thin.ttf");
+}
+
+@font-face {
+  font-family: "Public Sans Bold";
+  src: url("../fonts/PublicSans-Bold.ttf");
+}
+
 
 .material-symbols-outlined {
   font-variation-settings:
@@ -1178,7 +1203,101 @@ background: rgb(245, 245, 245);
   grid-column: 4 span / 4 span;
   width: 100%;
   height: 100%;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
+
+.post{
+  width: 650px;
+  height: fit-content;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+
+}
+
+
+.publicacoesHolder{
+  width: 650px;
+  height: fit-content;
+  background: white;
+  margin: 60px 0 60px 0 ;
+  padding: 30px 0 30px 0 ;
+
+  border-radius: 10px;
+}
+
+.elementosUserPost{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding-inline: 24px;
+  gap: 15px;
+  width: 100%;
+}
+.holderPost{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding-inline: 24px;
+  gap: 10px;
+  width: 90%;
+  margin-top: 10px;
+
+ word-break: break-all;
+}
+
+
+
+#post img.imagemUser{
+  border: none;
+}
+
+.foto{
+  width: 600px;
+  align-self: center;
+
+  border-radius: 10px;
+
+  margin-top: 20px;
+}
+
+.texto{
+  font-family: 'Raleway Bold';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 19px;
+
+color: #5E5E5E;
+}
+
+.itimaliasPost{
+  padding-inline: 24px;
+  margin-top: 10px;
+
+  font-family: 'Public Sans Bold';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 23px;
+
+
+  color: #000000;
+}
+
+.login{
+  font-family: 'Public Sans Bold';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 23px;
+
+  color: #000000;
+}
+
 
 .rightBarHolder {
   grid-column: 2 span / 2 span;
