--- a/assets/styles/stylesheet.css
+++ b/assets/styles/stylesheet.css
@@ -133,9 +133,6 @@ body {
   background-color: rgba(255, 255, 255, 0.3);
 }
 
-.FooterHolder {
-}
-
 .hover-underline-animation-white {
   display: inline-block;
   position: relative;
@@ -233,7 +230,7 @@ body {
   justify-content: space-evenly;
   align-items: center;
   width: 100%;
-  height: 90vh;
+  height: 105vh;
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url("../images/background.svg");
@@ -242,6 +239,7 @@ body {
 .descHolder {
   width: 41vw;
   margin-left: 80px;
+  margin-bottom: 6rem;
 }
 
 .desc {
@@ -260,6 +258,7 @@ body {
 
 .descImage {
   width: 40vw;
+  margin-bottom: 4.5rem;
 }
 
 /* SEGUNDA PARTE PAGE */
@@ -296,7 +295,7 @@ body {
 }
 
 .imgPosts {
-  width: 50vw;
+  width: 45vw;
 }
 
 .divTexto {
@@ -399,13 +398,14 @@ body {
 }
 
 .lojinhaTextHolder {
-  width: 20vw;
+  width: 22vw;
+  margin-top: 1rem;
 }
 
 .lojinhaText {
   color: #2f3136;
   font-family: "Raleway Bold", sans-serif;
-  font-size: 1.2vw;
+  font-size: 1.6rem;
   display: inline-block;
 }
 
@@ -869,7 +869,7 @@ cursor: default;
 }
 
 .parte1CriarPost .textNomeUsuario{
-  font-family: 'Raleway Bold';
+  font-family: "Raleway Bold", sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 20px;
@@ -1181,7 +1181,7 @@ background: rgb(245, 245, 245);
 }
 
 .textNomeUsuario {
-  font-family: "Raleway Bold";
+  font-family: "Raleway Bold", sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 18px;
@@ -1190,7 +1190,7 @@ background: rgb(245, 245, 245);
 }
 
 .textTagUsuario {
-  font-family: "Raleway Bold";
+  font-family: "Raleway Bold", sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
