--- a/private-adm/dashboard/pages/tutores/tutores.css
+++ b/private-adm/dashboard/pages/tutores/tutores.css
@@ -41,7 +41,7 @@ body{
     height: 100vh;
     font-family: 'Raleway', 'sans-serif';
     overflow-x: hidden;
-    background-image: url(/images/dashboard-bg.svg);
+    background-image: url(../../images/dashboard-bg.svg);
     background-repeat: no-repeat;
     background-position: cover;
 }
@@ -435,7 +435,7 @@ main .info-tutores .perfis-tutores{
 }
 
 .right-side .contato{
-    background-image: url(/images/fundo-btn.svg);
+    background-image: url(../../images/fundo-btn.svg);
     background-repeat: no-repeat;
     background-size: cover;
 
@@ -457,3 +457,6 @@ main .info-tutores .perfis-tutores{
     align-items: center;
 }
 
+.tabelaUsuarios{
+    
+}
