--- a/private-adm/dashboard/pages/empresas/empresas.css
+++ b/private-adm/dashboard/pages/empresas/empresas.css
@@ -41,7 +41,7 @@ body{
     height: 100vh;
     font-family: 'Raleway', 'sans-serif';
     overflow-x: hidden;
-    background-image: url(/images/dashboard-bg.svg);
+    background-image: url(../../images/dashboard-bg.svg);
     background-repeat: no-repeat;
     background-position: cover;
 }
@@ -435,7 +435,7 @@ main .info-pets .perfis-pets{
 }
 
 .right-side .contato{
-    background-image: url(/images/fundo-btn.svg);
+    background-image: url(../../images/fundo-btn.svg);
     background-repeat: no-repeat;
     background-size: cover;
 
