dashboard e htacces dashboard

--- a/private-adm/dashboard/pages/dashboard/dashboard.css
+++ b/private-adm/dashboard/pages/dashboard/dashboard.css
@@ -40,7 +40,7 @@ body{
     height: 100vh;
     font-family: 'Raleway', 'sans-serif';
     overflow-x: hidden;
-    background-image: url(../../images/dashboard-bg.svg);
+    background-image: url(/petiti/private-adm/dashboard/images/dashboard-bg.svg);
     background-repeat: no-repeat;
     background-position: cover;
 }
@@ -415,7 +415,7 @@ main .informacoes .graficos{
 }
 
 .right-side .contato{
-    background-image: url(../../images/fundo-btn.svg);
+    background-image: url(/petiti/private-adm/dashboard/images/fundo-btn.svg);
     background-repeat: no-repeat;
     background-size: cover;
 
