--- a/assets/css/feed-style.css
+++ b/assets/css/feed-style.css
@@ -164,6 +164,16 @@ body.feed{
     color: white;
   }
   
+.flex-row{
+  display: flex;
+  flex-direction: row;
+}
+
+.flex-col{
+  display: flex;
+  flex-direction: column;
+}
+
   .text-bold{
     font-weight: 500;
   }
@@ -172,6 +182,11 @@ body.feed{
     color: var(--color-gray);
   }
   
+  .a-text{
+    color: var(--color-purple);
+  }
+
+
   
    /* NavFeed */
   nav.feed{
@@ -1239,7 +1254,7 @@ font-size: 15px;
     display: flex;
     flex-direction: column;
     position: relative;
-    
+    padding-bottom: 1rem;
   }
 
   .meio .userHandle::after{
@@ -1263,14 +1278,33 @@ font-size: 15px;
   .meio .userInfo{
     margin: 0 1.5rem;
     display: flex;
+    width: 40rem;
     flex-direction: column;
     justify-content: space-around;
   }
 
   .meio .infoHolder {
     display: flex;
-    width: 100%;
+    width: 70%;
     gap: 2rem;
+  }
+
+
+
+  .meio .infoHolder a{
+
+    font-family: 'Raleway', sans-serif;
+    color: var(--color-purple);
+    font-weight: 900;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
+  .meio .infoHolder h4{
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   .meio .topo{
@@ -1284,7 +1318,148 @@ font-size: 15px;
     font-weight: 900;
     box-shadow: 4px 1px 18px 0px #00000057;
   }
+
+  .perfilUsuario #modal-editar-perfil{
+    width: 650px !important;
+    height: fit-content !important;
+    padding: var(--card-padding) !important;
+    border-radius: var(--card-border-radius) !important;
+  }
+
+
+  .perfilUsuario #modal-editar-perfil .editPerfilHeader{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    height: 3rem;
+    align-items: center;
+  }
+
+  .perfilUsuario #modal-editar-perfil .editPerfilHeader a{
+    font-size: 2.5rem;
+    color: var(--color-dark);
+  }
+
+  .perfilUsuario #modal-editar-perfil .editPerfilHeader .flex-row{
+    width: 15rem;
+    height: 100%;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .perfilUsuario #modal-editar-perfil .editPerfilHeader .btn{
+    color: var(--color-dark);
+    font-weight: 600;
+    width: 10rem;
+    height: 40px;
+    font-size: 1.2rem;
+    box-shadow: 0px 6px 12px 0px #00000057;
+    border-radius: 15px;
+  }
+
+  .perfilUsuario #modal-editar-perfil .editarPerfilForm{
+    padding: 1rem 2rem;
+  }
   
+  .perfilUsuario #modal-editar-perfil .editarPerfilForm .flex-col {
+    width: 100%;
+    height: 5.5rem;
+    margin: 1.5rem 0;
+    gap: 0.5rem;
+  }
+  .perfilUsuario #modal-editar-perfil .editarPerfilForm .biografia{
+    height: 12rem;
+  }
+
+  .perfilUsuario #modal-editar-perfil .editarPerfilForm .biografia textarea{
+    height: 10rem;
+    border-radius: 20px;
+    border: 1px solid gray;
+    padding-inline: 1rem;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 600;
+    font-size: 1.1rem;
+    padding: var(--card-padding);
+  }
+
+  .perfilUsuario #modal-editar-perfil .editarPerfilForm .biografia textarea:focus{
+    outline: 1px solid gray;
+  }
+
+  .perfilUsuario #modal-editar-perfil .editarPerfilForm .biografia h4{
+    align-self: flex-end;
+  }
+
+  .perfilUsuario #modal-editar-perfil .editarPerfilForm .flex-row{
+    margin: 2rem 0;
+  }
+
+  .perfilUsuario #modal-editar-perfil .editarPerfilForm .text-bold{
+    font-weight: 700;
+    font-size: 1.4rem;
+  }
+
+  .perfilUsuario #modal-editar-perfil .editarPerfilForm  input[type="text"]{
+
+    font-family: 'Raleway', sans-serif;
+    font-weight: 600;
+    font-size: 1.1rem;
+
+    height: 100%;
+    border-radius: 20px;
+    border: 1px solid gray;
+    padding-inline: 1rem;
+
+  }
+
+  .perfilUsuario #modal-editar-perfil .editarPerfilForm  input[type="text"]::placeholder{
+    font-family: 'Raleway', sans-serif;
+    font-weight: 600;
+    font-size: 1.1rem;
+  }
+  .perfilUsuario #modal-editar-perfil .editarPerfilForm  input[type="text"]:focus{
+    outline: 1px solid gray;
+  }
+
+  .perfilUsuario #modal-editar-perfil .editarPerfilForm .flex-row .fotoDePerfil{
+    width: 8rem;
+  }
+
+  .perfilUsuario #modal-editar-perfil .editarPerfilForm .flex-row{
+    position: relative;
+  }
+
+  .perfilUsuario #modal-editar-perfil .editarPerfilForm .flex-row input[type="file"]{
+    display: none;
+  }
+
+  .perfilUsuario #modal-editar-perfil .editarPerfilForm .flex-row label.flFotoPerfil{
+    position: absolute;
+    width: 8rem;
+    aspect-ratio: 1/1;
+    border-radius: 80px;
+    cursor: pointer;
+
+    transition: all 300ms ease;
+  }
+
+  .perfilUsuario #modal-editar-perfil .editarPerfilForm .flex-row label.flFotoPerfil:hover{
+    background: rgb(0 0 0 / 25%);
+  }
+
+  .perfilUsuario #modal-editar-perfil .editarPerfilForm .flex-row h2 label.flFotoPerfil2{
+    cursor: pointer;
+    align-self: center;
+  }
+
+  .perfilUsuario #modal-editar-perfil .editarPerfilForm .flex-row h2 {
+    height: fit-content;
+    align-self: center;
+    margin: 0 2rem;
+  }
+
+
+
   .meio .meio {
     gap: 2.2rem;
   }
@@ -1292,6 +1467,7 @@ font-size: 15px;
   .meio .baixo{
     align-items: center;
     margin-left: -0.8rem;
+    gap: 0.5rem;
   }
 
   .meio .baixo i{
@@ -1301,6 +1477,7 @@ font-size: 15px;
   .meio .userBaixo{
     margin: 1.5rem 1rem;
     gap: 1rem;
+    width: 100%;
   }
 
   .meio .subUserBaixo{
@@ -1308,6 +1485,12 @@ font-size: 15px;
     margin-bottom: 1rem;
 
     align-items: center;
+  }
+
+  .meio .userBaixo .subUserBaixo h2{
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   .meio .subUserBaixo h4{
@@ -1318,8 +1501,12 @@ font-size: 15px;
   .meio .bio{
     height: fit-content;
     max-height: 57px;
-    width: 35rem;
-    overflow: hidden;
+    width: 30rem;
+    
+  }
+
+  .meio .bio h4{
+    overflow-wrap: break-word;
   }
 
 
